refactor: 이메일 검증 시스템 제거 준비 - 테스트 실패 상태 백업
- 이메일 검증 관련 36개 테스트 실패 상태
- JWT 기반 인증으로 전환 예정
- 현재 세션 기반 인증 유지

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>